--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
   <body>
     <!-- write the body here -->
 
+	  <div id="root">
+        <form id="candidate-form">
+            <input type="number" name="age" id="age" placeholder="Enter your age" min="1" max="150" required>
+            <input type="text" name="name" id="name" placeholder="Enter your name" required>
+            <button type="submit" id="btn">Verify</button>
+        </form>
+    </div>
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
